--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -1,11 +1,41 @@
+{% load bootstrap4 %}
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ LANGUAGE_CODE }}">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
+    {% bootstrap_css %}
+    {% bootstrap_javascript jquery='full' %}
+    <title>{% translate "Task Manager" %}</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+      <a class="navbar-brand" href="/">{% translate "Task Manager" %}</a>
+      <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-expanded="false">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarToggleExternalContent" style="">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/users/">{% translate "Users" %}</a>
+          </li>
+          
+        </ul>
+        <ul class="navbar-nav">
+          
+            <li class="nav-item">
+              <a class="nav-link" href="/login/">{% translate "Sign In" %}</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/create/">{% translate "Register" %}</a>
+            </li>
+          
+        </ul>
+      </div>
+    </nav>
     <h1>Hello World!</h1>
   </body>
 </html>
