--- a/templates/form.html
+++ b/templates/form.html
@@ -2,10 +2,16 @@
 {% load i18n %}
 {% load bootstrap4 %}
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    <h1 class="my-4">{{ title }}</h1>
-    {% bootstrap_form form %}
-    {% bootstrap_button button_text button_type="submit"  button_class="btn-primary" %}
-</form>
+<div class="container wrapper flex-grow-1">
+    <div class="card">
+        <div class="card-body p-5 bg-light mt-5 pt-4 pb-16">
+            <form method="post">
+                {% csrf_token %}
+                <h1 class="my-4">{{ title }}</h1>
+                {% bootstrap_form form %}
+                {% bootstrap_button button_text button_type="submit"  button_class="btn-primary" %}
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
