--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                   <a class="nav-link" href="">{% translate 'Labels' %}</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="">{% translate 'Tasks' %}</a>
+                  <a class="nav-link" href="{% url 'tasks:tasks_list' %}">{% translate 'Tasks' %}</a>
               </li>
             {% endif %}
           </ul>
