--- a/templates/delete.html
+++ b/templates/delete.html
@@ -2,15 +2,21 @@
 {% load i18n %}
 {% load bootstrap4 %}
 {% block content %}
-  <form method="post">
-    {% csrf_token %}
-    <h1 class="my-4">{{ title }}</h1>
-    <p>{% translate "Are you sure you want to delete" %}
-      {% if object.first_name %}
-        {{ object.first_name }} {{ object.last_name }}
-      {% else %}
-        {{ object.name }}
-      {% endif %} </p>
-    {% bootstrap_button button_text button_type="submit" button_class="btn-danger" %}
-  </form>
+<div class="container wrapper flex-grow-1">
+  <div class="card">
+      <div class="card-body p-5 bg-light mt-5 pt-4 pb-16">
+        <form method="post">
+          {% csrf_token %}
+          <h1 class="my-4">{{ title }}</h1>
+          <p>{% translate "Are you sure you want to delete" %}
+            {% if object.first_name %}
+              {{ object.first_name }} {{ object.last_name }}
+            {% else %}
+              {{ object.name }}
+            {% endif %} </p>
+          {% bootstrap_button button_text button_type="submit" button_class="btn-danger" %}
+        </form>
+      </div>
+  </div>
+</div>
 {% endblock %}
