--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,21 @@
 {% load i18n %}
 
 {% block content %}
-  <h1>Hello World!</h1>
+  <div class="container wrapper flex-grow-1">
+    <h1 class="my-4"></h1>
+<h1 class="my-4"></h1>
+<div class="card">
+<div class="card-body p-5 bg-light">
+  <div class="display-4">Привет от Хекслета!</div>
+  <p class="lead">Практические курсы по программированию</p>
+  <hr>
+  <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">Узнать больше</a>
+</div>
+</div>
+  </div>
+  <footer>
+    <div class="container my-5 pt-4 border-top fixed-bottom">
+      <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
+    </div>
+  </footer>
 {% endblock content %}
