--- a/statuses/templates/statuses/statuses_list.html
+++ b/statuses/templates/statuses/statuses_list.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% block content %}   
- <div class="container wrapper flex-grow-1">
-    <div class="card">
-        <div class="card-body p-5 bg-light mt-5 pt-4 pb-16">
 <h1 class="my-4">{{ title }}</h1>
 <a class="nav-link" href="{% url 'statuses:create' %}">{% translate "Create status" %}</a>
 <table class="table table-striped">
@@ -21,17 +18,13 @@
             <td>{{ status.id }}</td>
             <td>{{ status.name }}</td>
             <td>{{ status.created_at|date:"d.m.Y H:i" }}</td>
-            {% comment %} <td>
-                <a href="{% url 'statuses:update' status.id %}">{% translate "Change" %}</a>
+            <td>
+                <a href="{% url 'statuses:update' status.id %}">{% translate "Update" %}</a>
                 <br>
                 <a href="{% url 'statuses:delete' status.id %}">{% translate "Delete" %}</a>
-            </td> {% endcomment %}
+            </td>
         </tr>
         {% endfor %}
     </tbody>
 </table>
-</div>
-</div>
-</div>
-
 {% endblock %}
