--- a/tasks/templates/tasks/tasks_details.html
+++ b/tasks/templates/tasks/tasks_details.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row p-1">
           <div class="col">
-            <a href="{% url 'tasks:change' task.id %}">{% translate "Change" %}</a>
+            <a href="{% url 'tasks:update' task.id %}">{% translate "Change" %}</a>
             <br>
             <a href="{% url 'tasks:delete' task.id %}">{% translate "Delete" %}</a>
           </div>
