--- a/tasks/templates/tasks/tasks_list.html
+++ b/tasks/templates/tasks/tasks_list.html
@@ -3,6 +3,16 @@
 {% load bootstrap4 %}
 {% block content %}
     <h1 class="my-4">{{ title }}</h1>
+    <div class="card">
+        <div class="card-body bg-light">
+            <form class="form-inline center my-auto" method="get">
+                {% csrf_token %}
+                {% bootstrap_form filter.form form_group_class="form-group" field_class="ml-2 mr-3"%}
+                {% bootstrap_button button_text button_type="submit" button_class="btn-primary" %}
+            </form>
+        </div>
+    </div>
+    <h1 class="my-4">{{ title }}</h1>
     <a class="nav-link" href="{% url 'tasks:create' %}">{% translate "Create task" %}</a>
     <table class="table table-striped">
         <thead>
