--- a/templates/delete.html
+++ b/templates/delete.html
@@ -10,7 +10,7 @@
               {{ object.first_name }} {{ object.last_name }}
             {% else %}
               {{ object.name }}
-            {% endif %} </p>
+            {% endif %} ?</p>
           {% bootstrap_button button_text button_type="submit" button_class="btn-danger" %}
         </form>
 {% endblock %}
